[gd_scene load_steps=17 format=2]

[ext_resource path="res://OceanGradient.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Ocean.gd" type="Script" id=3]
[ext_resource path="res://Room.tscn" type="PackedScene" id=4]
[ext_resource path="res://Gateway.tscn" type="PackedScene" id=5]
[ext_resource path="res://GatewayGrabber.gd" type="Script" id=6]
[ext_resource path="res://PhysicsBodyMover.gd" type="Script" id=7]
[ext_resource path="res://UI.gd" type="Script" id=8]
[ext_resource path="res://Roboto-Regular.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Bullet.tscn" type="PackedScene" id=10]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=11]
[ext_resource path="res://PlaceholderRectangle.tscn" type="PackedScene" id=12]
[ext_resource path="res://Goal.jpg" type="Texture" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 35 )

[sub_resource type="CircleShape2D" id=2]
radius = 83.6115

[sub_resource type="DynamicFont" id=3]
size = 72
font_data = ExtResource( 9 )

[node name="Main" type="Node2D"]

[node name="Ocean" type="Sprite" parent="."]
z_as_relative = false
texture = ExtResource( 1 )
centered = false
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="Ocean"]
margin_top = 1070.0
margin_right = 1920.0
margin_bottom = 3070.0
color = Color( 0, 0.231373, 0.321569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Room" parent="." instance=ExtResource( 4 )]
position = Vector2( 488, 536 )

[node name="Gateway" parent="Room" instance=ExtResource( 5 )]
position = Vector2( -105.953, -201.522 )

[node name="Gateway3" parent="Room" instance=ExtResource( 5 )]
position = Vector2( -96, 200 )

[node name="Gateway2" parent="Room" instance=ExtResource( 5 )]
position = Vector2( -497.953, -25.5215 )
rotation = -1.57079

[node name="Room3" parent="." instance=ExtResource( 4 )]
position = Vector2( 1488, 136 )

[node name="Gateway" parent="Room3" instance=ExtResource( 5 )]
position = Vector2( -105.953, -201.522 )

[node name="Gateway3" parent="Room3" instance=ExtResource( 5 )]
position = Vector2( -96, 200 )

[node name="Gateway2" parent="Room3" instance=ExtResource( 5 )]
position = Vector2( -504, -160 )
rotation = -1.57079

[node name="Enemy" parent="Room3" instance=ExtResource( 11 )]
position = Vector2( -312, 144 )

[node name="Enemy2" parent="Room3" instance=ExtResource( 11 )]
position = Vector2( -216, 24 )

[node name="Enemy3" parent="Room3" instance=ExtResource( 11 )]
position = Vector2( -80, -16 )

[node name="Room2" parent="." instance=ExtResource( 4 )]
position = Vector2( 488, 136 )

[node name="Gateway" parent="Room2" instance=ExtResource( 5 )]
position = Vector2( -105.953, -201.522 )

[node name="Gateway3" parent="Room2" instance=ExtResource( 5 )]
position = Vector2( 448, -40 )

[node name="Gateway2" parent="Room2" instance=ExtResource( 5 )]
position = Vector2( -497.953, -25.5215 )
rotation = -1.57079

[node name="Player" type="KinematicBody2D" parent="." groups=[
"players",
]]
position = Vector2( 397.195, 544.657 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="ColorRect" parent="Player"]
margin_left = -20.0
margin_top = -35.0
margin_right = 20.0
margin_bottom = 35.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
smoothing_enabled = true

[node name="JumpRaycast" type="RayCast2D" parent="Player"]
enabled = true
cast_to = Vector2( 0, 40 )

[node name="GatewayGrabber" type="Area2D" parent="Player"]
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/GatewayGrabber"]
shape = SubResource( 2 )

[node name="PhysicsBodyMover" type="Tween" parent="Player"]
script = ExtResource( 7 )

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 8 )
player_path = NodePath("../Player")

[node name="RestartLabel" type="Label" parent="UI"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
text = "You are dead, press escape to restart..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bullet" parent="." instance=ExtResource( 10 )]

[node name="Enemy" parent="." instance=ExtResource( 11 )]
position = Vector2( 760, 560 )

[node name="Enemy4" parent="." instance=ExtResource( 11 )]
position = Vector2( 760, 472 )

[node name="Enemy2" parent="." instance=ExtResource( 11 )]
position = Vector2( 120, 264 )

[node name="Enemy3" parent="." instance=ExtResource( 11 )]
position = Vector2( 240, 192 )

[node name="Enemy5" parent="." instance=ExtResource( 11 )]
position = Vector2( 824, 24 )

[node name="Platform" type="StaticBody2D" parent="."]
position = Vector2( 864, 80 )
__meta__ = {
"_edit_group_": true
}

[node name="PlaceholderRectangle" parent="Platform" instance=ExtResource( 12 )]
color = Color( 0, 0, 0, 1 )

[node name="Goal" type="Sprite" parent="."]
position = Vector2( 1432, -248 )
scale = Vector2( 0.159919, 0.159919 )
texture = ExtResource( 13 )
[connection signal="moved_through_vent" from="Player/PhysicsBodyMover" to="Player" method="_on_PhysicsBodyMover_moved_through_vent"]
[connection signal="tween_all_completed" from="Player/PhysicsBodyMover" to="Player/PhysicsBodyMover" method="_on_PhysicsBodyMover_tween_all_completed"]
